--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "scripts": {
         "start": "tsdx watch",
-        "build": "tsdx build",
+         "build": "tsdx build --tsconfig tsconfig.json",
         "test": "tsdx test --passWithNoTests",
         "lint": "tsdx lint",
         "prepare": "tsdx build",
