--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
+    
     "importHelpers": true,
     // output .d.ts declaration files for consumers
     "declaration": true,
@@ -31,5 +32,11 @@
     "forceConsistentCasingInFileNames": true,
     // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
     "noEmit": true,
-  }
+    "target": "es5",
+    "allowSyntheticDefaultImports": true,
+    "outDir": "dist"
+    
+  },
+
+  "exclude": ["node_modules", "dist", "example"]
 }
